Squashed commit of the following:
commit df804025d4977035d679a1efaad15e82eb3d82de
Author: TheJumpCloud <TheJumpCloud>
Date:   Wed Sep 15 22:30:39 2021 +0000

    Updating ADMU Module;[skip ci]

commit 75d635949932d12800f5badbb95f0ba7cc063f65
Author: Joe Workman <joe.workman@jumpcloud.com>
Date:   Wed Sep 15 15:59:18 2021 -0600

    comments and cleanup

commit a0467edc6752355430808e905b17da0c609dc515
Author: TheJumpCloud <TheJumpCloud>
Date:   Tue Sep 14 22:29:49 2021 +0000

    Updating ADMU Module;[skip ci]

commit 618fdffc9b0ed964d033cdb445aef531c7c7caff
Author: Joe Workman <joe.workman@jumpcloud.com>
Date:   Tue Sep 14 16:12:15 2021 -0600

    Remove Skip

commit 5849809cb78d4cf9bd125889c44226d28e793756
Merge: 7c5698e ac7231d
Author: Geoffrey Wein <geoffrey.wein@jumpcloud.com>
Date:   Tue Sep 14 17:09:51 2021 -0500

    Merge branch 'SA-1973-2.0GuiUpdates' of https://github.com/TheJumpCloud/jumpcloud-ADMU into SA-1973-2.0GuiUpdates

commit 7c5698ee0d3afaaf5492036dbb665434fbaacedc
Author: Geoffrey Wein <geoffrey.wein@jumpcloud.com>
Date:   Tue Sep 14 17:04:42 2021 -0500

    Added Test-JumpCloudUsername test

    Created test for the Test-JumpCloudUsername function

commit ac7231d6a621438a7c43eed6de065cda0dd0a6f5
Author: TheJumpCloud <TheJumpCloud>
Date:   Tue Sep 14 21:33:46 2021 +0000

    Updating ADMU Module;[skip ci]

commit 290a631bbac0549ceed8f9986b872ab90d45b15f
Merge: 87ccf07 7fcf9d6
Author: Joe Workman <joe.workman@jumpcloud.com>
Date:   Tue Sep 14 15:14:04 2021 -0600

    Merge branch 'SA-1973-2.0GuiUpdates' of https://github.com/TheJumpCloud/jumpcloud-ADMU into SA-1973-2.0GuiUpdates

commit 87ccf071acfa83066b6a17bb73058aa7d1492026
Author: Joe Workman <joe.workman@jumpcloud.com>
Date:   Tue Sep 14 15:13:52 2021 -0600

    Add logic to form & additional message

commit 7fcf9d65655090ce068f8c68f5873a565ae7d3e3
Author: TheJumpCloud <TheJumpCloud>
Date:   Tue Sep 14 21:08:54 2021 +0000

    Updating ADMU Module;[skip ci]

commit a132a1abd3090e1de2d06e6ca35

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,14 @@
 version: 2.1
 parameters:
   buildReleaseType:
-    description: 'Semantic Version increment type of the release. Valid values: major, minor, patch'
-    default: "patch"
+    description: "Semantic Version increment type of the release. Valid values: major, minor, patch"
+    default: "major"
     type: enum
     enum: ["major", "minor", "patch"]
 orbs:
   win: circleci/windows@2.2.0
+  slack: circleci/slack@4.1
+
 build-and-sign-ADMU: &build-and-sign-ADMU
   - Build
   - Pester Tests:
@@ -16,7 +18,7 @@ build-and-sign-ADMU: &build-and-sign-ADMU
   #    requires:
   #      - Build
   #      - Pester Tests
-    #  context: secrethub-credentials
+  #  context: secrethub-credentials
   - Build Module:
       requires:
         - Build
@@ -82,6 +84,7 @@ jobs:
           name: Build
           shell: powershell.exe
           command: |
+            $ErrorActionPreference = 'Stop'
             ./Deploy/Build.ps1 $env:CIRCLE_WORKING_DIRECTORY
       - persist_to_workspace:
           root: .
@@ -121,6 +124,7 @@ jobs:
       - store_test_results:
           name: Uploading test results for ADMU'
           path: ./jumpcloud-ADMU/test_results/
+
   Sign Executable:
     executor: win/default
     steps:
@@ -208,12 +212,12 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - '6b:97:dc:6d:d1:d1:3f:67:62:c4:ad:2d:96:3c:9a:d7'
+            - "6b:97:dc:6d:d1:d1:3f:67:62:c4:ad:2d:96:3c:9a:d7"
       - attach_workspace:
           at: .
       - run:
           when: on_success
-          name: 'Commit ADMU Module to << pipeline.git.branch >>'
+          name: "Commit ADMU Module to << pipeline.git.branch >>"
           shell: pwsh.exe
           command: |
             $UserEmail = If ($env:CIRCLE_PROJECT_USERNAME) { $env:CIRCLE_PROJECT_USERNAME } Else { ($env:USERNAME).Replace(' ', '') + '@FakeEmail.com' }
