--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,6 @@ build-and-sign-ADMU: &build-and-sign-ADMU
         - Build
         - Pester Tests
   - Sign Exe
-      # context: github-credentials
       # requires:
       #   - Build
       #   - Pester Tests
@@ -258,7 +257,10 @@ jobs:
       - run:
           name: Sign unsigned exe
           command: |
-                curl --request POST --url 'https://api.github.com/repos/TheJumpCloud/jumpcloud-ghactions-testing/dispatches' --header "authorization: Bearer $GITHUB_TOKEN_SA_KEN" --data '{"event_type": "Sign Exe"}'    
+                if [[ -z "$CIRCLE_PULL_REQUEST" ]]; then
+                  echo "This is not a pull request" 
+                fi
+                  curl --request POST --url 'https://api.github.com/repos/TheJumpCloud/jumpcloud-ghactions-testing/dispatches' --header "authorization: Bearer $GITHUB_TOKEN_SA_KEN" --data '{"event_type": "Sign Exe"}'    
 commands:
   deploy-nupkg:
     parameters:
