--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,4 +1,4 @@
-on: push
+on: repository_dispatch
 jobs:
   build:
     runs-on: windows-latest
@@ -9,11 +9,4 @@ jobs:
           BASE64_ENCODED_SELF_SIGNED_CERT: ${{ secrets.BASE64_ENCODED_SELF_SIGNED_CERT }}
           CERTPASS: ${{ secrets.CERTPASS }}
         run: |
-          ./sign.ps1
-      - name: Push changes
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add .
-          git commit -m "generated"
-          git push
+          echo Dispatch ran
