--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -6,7 +6,7 @@ jobs:
       - uses: actions/checkout@v2
       - shell: pwsh
         env:
-          BASE64_ENCODED_SELF_SIGNED_CERT: ${{ secrets.BASE64_ENCODED_SELF_SIGNED_CERT }}
+          BASE64_ENCODED_CERT: ${{ secrets.BASE64_ENCODED_CERT }}
           CERTPASS: ${{ secrets.CERTPASS }}
         run: |
           echo Dispatch ran
