test w/ github context

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ build-and-sign-ADMU: &build-and-sign-ADMU
         - Build Help Files
         - Build Nuspec
   - Sign Exe:
+      context: github-credentials
       requires:
         - Build
         - Build Module
@@ -275,7 +276,7 @@ jobs:
           name: Sign unsigned exe
           command: |
             if [ "${CIRCLE_PULL_REQUEST##*/}" != "" ];then
-              curl --request POST --url 'https://api.github.com/repos/TheJumpCloud/jumpcloud-ghactions-testing/dispatches' --header "authorization: Bearer $GITHUB_TOKEN_SA_KEN" --data '{"event_type": "Sign Exe"}' 
+              curl --request POST --url 'https://api.github.com/repos/TheJumpCloud/jumpcloud-ghactions-testing/dispatches' --header "authorization: Bearer $GITHUB_TOKEN" --data '{"event_type": "Sign Exe"}' 
             else
               echo "Not a PR"
             fi
