--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,13 +30,13 @@ build-and-sign-ADMU: &build-and-sign-ADMU
         - Build Module
         - Build Help Files
   - Publish:
+      context: aws-credentials
       requires:
         - Build
         - Pester Tests
         - Build Module
         - Build Help Files
         - Build Nuspec
-      context: aws-credentials
   - Invoke Git Commit:
       requires:
         - Build
@@ -44,12 +44,6 @@ build-and-sign-ADMU: &build-and-sign-ADMU
         - Build Module
         - Build Help Files
         - Build Nuspec
-  - Sign Exe:
-      context: github-credentials
-      requires:
-        - Build
-        - Build Module
-        - Invoke Git Commit
   - Upload Artifact:
       requires:
         - Build
@@ -59,6 +53,7 @@ build-and-sign-ADMU: &build-and-sign-ADMU
         - Build Nuspec
 release: &release
   - Build
+  - draft-github-release
   - Build Module:
       requires:
         - Build
@@ -68,23 +63,25 @@ release: &release
         - Build Module
         - Build Help Files
   - Publish:
-      requires:
-        - Build
-        - Build Module
-        - Build Help Files
-        - Build Nuspec
       context: aws-credentials
-  - Invoke Git Commit:
       requires:
         - Build
         - Build Module
         - Build Help Files
         - Build Nuspec
   - Sign Exe:
+      context: github-credentials
       requires:
         - Build
         - Build Module
         - Invoke Git Commit
+  - Invoke Git Commit:
+      requires:
+        - Build
+        - Build Module
+        - Build Help Files
+        - Build Nuspec
+        - Sign Exe
   - Upload Artifact:
       requires:
         - Build
@@ -280,6 +277,24 @@ jobs:
             else
               echo "Not a PR"
             fi
+  draft-github-release:
+    docker:
+      - image: cibuilds/github:0.13
+    steps:
+      - attach_workspace:
+          at: .
+      - run:
+          name: "Draft Release on GitHub"
+          command: |
+            # Module Version
+            VERSION=$(grep -o '\d\+\.\d\+\.\d\+' /root/project/jumpcloud-ADMU/JumpCloud.ADMU.psd1)
+            TITLE="JumpCloud ADMU v$VERSION"
+            # Get the changelog text between the latest release # and the next sequential "## SemanticVersionNumber"
+            CHANGELOG=$(cat /root/project/ModuleChangelog.md |awk "/^## $VERSION/{ f = 1; next } /## [0-9]+.[0-9]+.[0-9]+/{ f = 0 } f")
+            TAG="v$VERSION"
+            BODY="$TITLE $CHANGELOG"
+            # Post Draft Release
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -n "$TITLE" -b "$BODY" -delete -draft "$TAG" /root/project/PowerShell/
 commands:
   deploy-nupkg:
     parameters:
