--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,6 +144,7 @@ jobs:
           command: |
             Install-Module -Name:('PSScriptAnalyzer') -Force
             Install-Module -Name:('JumpCloud') -Force
+            Install-Module -Name:('Pester') -Force
             If (-not [System.String]::IsNullOrEmpty($env:JCApiKey) -and -not [System.String]::IsNullOrEmpty($env:JCOrgId))
             {
                 Write-Host ('[VALIDATION] JCApiKey AND JCOrgId have been populated.')
